// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AuthenticatedAdminLayoutWrapper rendering tests sidebarCookie false - test 1`] = `
<div>
  <div
    class="h-full"
    data-testid="authenticated-admin-layout-wrapper"
  >
    <div
      class="group/sidebar-wrapper has-data-[variant=inset]:bg-sidebar flex min-h-svh w-full"
      data-slot="sidebar-wrapper"
      data-testid="sidebar-wrapper"
      style="--sidebar-width: 16rem; --sidebar-width-icon: 3rem;"
    >
      <div
        class="group peer text-sidebar-foreground hidden md:block"
        data-collapsible="icon"
        data-side="left"
        data-slot="sidebar"
        data-state="collapsed"
        data-variant="sidebar"
      >
        <div
          class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-200 ease-linear group-data-[collapsible=offcanvas]:w-0 group-data-[side=right]:rotate-180 group-data-[collapsible=icon]:w-(--sidebar-width-icon)"
          data-slot="sidebar-gap"
        />
        <div
          class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-200 ease-linear md:flex left-0 group-data-[collapsible=offcanvas]:left-[calc(var(--sidebar-width)*-1)] group-data-[collapsible=icon]:w-(--sidebar-width-icon) group-data-[side=left]:border-r group-data-[side=right]:border-l"
          data-slot="sidebar-container"
          data-testid="admin-sidebar"
        >
          <div
            class="bg-sidebar group-data-[variant=floating]:border-sidebar-border flex h-full w-full flex-col group-data-[variant=floating]:rounded-lg group-data-[variant=floating]:border group-data-[variant=floating]:shadow-sm"
            data-sidebar="sidebar"
            data-slot="sidebar-inner"
          >
            <div
              class="flex flex-col gap-2 p-2"
              data-sidebar="header"
              data-slot="sidebar-header"
              data-testid="admin-sidebar-header"
            >
              <div
                class="flex items-center justify-center py-1"
              >
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-7 shrink-0 cursor-pointer"
                  data-sidebar="trigger"
                  data-slot="sidebar-trigger"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-panel-left"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="18"
                      rx="2"
                      width="18"
                      x="3"
                      y="3"
                    />
                    <path
                      d="M9 3v18"
                    />
                  </svg>
                  <span
                    class="sr-only"
                  >
                    Toggle Sidebar
                  </span>
                </button>
              </div>
            </div>
            <div
              class="flex min-h-0 flex-1 flex-col gap-2 overflow-auto group-data-[collapsible=icon]:overflow-hidden"
              data-sidebar="content"
              data-slot="sidebar-content"
            >
              <div
                class="relative flex w-full min-w-0 flex-col p-2"
                data-sidebar="group"
                data-slot="sidebar-group"
              >
                <div
                  class="text-sidebar-foreground/70 ring-sidebar-ring flex h-8 shrink-0 items-center rounded-md px-2 text-xs font-medium outline-hidden transition-[margin,opacity] duration-200 ease-linear focus-visible:ring-2 [&>svg]:size-4 [&>svg]:shrink-0 group-data-[collapsible=icon]:-mt-8 group-data-[collapsible=icon]:opacity-0"
                  data-sidebar="group-label"
                  data-slot="sidebar-group-label"
                >
                  Administration
                </div>
                <div
                  class="w-full text-sm"
                  data-sidebar="group-content"
                  data-slot="sidebar-group-content"
                >
                  <ul
                    class="flex w-full min-w-0 flex-col gap-1"
                    data-sidebar="menu"
                    data-slot="sidebar-menu"
                  >
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/admin/dashboard"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-layout-dashboard"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="9"
                            rx="1"
                            width="7"
                            x="3"
                            y="3"
                          />
                          <rect
                            height="5"
                            rx="1"
                            width="7"
                            x="14"
                            y="3"
                          />
                          <rect
                            height="9"
                            rx="1"
                            width="7"
                            x="14"
                            y="12"
                          />
                          <rect
                            height="5"
                            rx="1"
                            width="7"
                            x="3"
                            y="16"
                          />
                        </svg>
                        <span>
                          Dashboard
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/admin/users"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-users"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                          />
                          <path
                            d="M16 3.128a4 4 0 0 1 0 7.744"
                          />
                          <path
                            d="M22 21v-2a4 4 0 0 0-3-3.87"
                          />
                          <circle
                            cx="9"
                            cy="7"
                            r="4"
                          />
                        </svg>
                        <span>
                          Nutzer
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/admin/subscriptions"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-credit-card"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="14"
                            rx="2"
                            width="20"
                            x="2"
                            y="5"
                          />
                          <line
                            x1="2"
                            x2="22"
                            y1="10"
                            y2="10"
                          />
                        </svg>
                        <span>
                          Abonnements
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/admin/subscription-plans"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chart-column"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M3 3v16a2 2 0 0 0 2 2h16"
                          />
                          <path
                            d="M18 17V9"
                          />
                          <path
                            d="M13 17V5"
                          />
                          <path
                            d="M8 17v-3"
                          />
                        </svg>
                        <span>
                          Abo-Pläne
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="relative flex w-full min-w-0 flex-col p-2"
                data-sidebar="group"
                data-slot="sidebar-group"
              >
                <div
                  class="w-full text-sm"
                  data-sidebar="group-content"
                  data-slot="sidebar-group-content"
                >
                  <ul
                    class="flex w-full min-w-0 flex-col gap-1"
                    data-sidebar="menu"
                    data-slot="sidebar-menu"
                  >
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/"
                      >
                        <span>
                          ← Zurück zur App
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main
        class="flex flex-1 flex-col overflow-hidden"
      >
        <header
          class="flex items-center gap-3 border-b bg-white px-4 py-3 sm:hidden"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-7 cursor-pointer"
            data-sidebar="trigger"
            data-slot="sidebar-trigger"
            data-testid="admin-sidebar-mobile-header"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-panel-left"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M9 3v18"
              />
            </svg>
            <span
              class="sr-only"
            >
              Toggle Sidebar
            </span>
          </button>
          <span
            class="text-base font-bold"
          >
            Vision Notes
             Admin
          </span>
        </header>
        <div
          class="min-h-0 flex-1"
        >
          <div
            data-testid="test-1"
          />
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`AuthenticatedAdminLayoutWrapper rendering tests sidebarCookie true - test 1`] = `
<div>
  <div
    class="h-full"
    data-testid="authenticated-admin-layout-wrapper"
  >
    <div
      class="group/sidebar-wrapper has-data-[variant=inset]:bg-sidebar flex min-h-svh w-full"
      data-slot="sidebar-wrapper"
      data-testid="sidebar-wrapper"
      style="--sidebar-width: 16rem; --sidebar-width-icon: 3rem;"
    >
      <div
        class="group peer text-sidebar-foreground hidden md:block"
        data-collapsible=""
        data-side="left"
        data-slot="sidebar"
        data-state="expanded"
        data-variant="sidebar"
      >
        <div
          class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-200 ease-linear group-data-[collapsible=offcanvas]:w-0 group-data-[side=right]:rotate-180 group-data-[collapsible=icon]:w-(--sidebar-width-icon)"
          data-slot="sidebar-gap"
        />
        <div
          class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-200 ease-linear md:flex left-0 group-data-[collapsible=offcanvas]:left-[calc(var(--sidebar-width)*-1)] group-data-[collapsible=icon]:w-(--sidebar-width-icon) group-data-[side=left]:border-r group-data-[side=right]:border-l"
          data-slot="sidebar-container"
          data-testid="admin-sidebar"
        >
          <div
            class="bg-sidebar group-data-[variant=floating]:border-sidebar-border flex h-full w-full flex-col group-data-[variant=floating]:rounded-lg group-data-[variant=floating]:border group-data-[variant=floating]:shadow-sm"
            data-sidebar="sidebar"
            data-slot="sidebar-inner"
          >
            <div
              class="flex flex-col gap-2 p-2"
              data-sidebar="header"
              data-slot="sidebar-header"
              data-testid="admin-sidebar-header"
            >
              <div
                class="flex items-center justify-between gap-2 px-1 py-1"
              >
                <a
                  class="flex min-w-0 items-center gap-2"
                  data-testid="mock-link"
                  href="/admin"
                >
                  <span
                    class="truncate text-lg font-bold"
                  >
                    Vision Notes
                     Admin
                  </span>
                </a>
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-7 shrink-0 cursor-pointer"
                  data-sidebar="trigger"
                  data-slot="sidebar-trigger"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-panel-left"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="18"
                      rx="2"
                      width="18"
                      x="3"
                      y="3"
                    />
                    <path
                      d="M9 3v18"
                    />
                  </svg>
                  <span
                    class="sr-only"
                  >
                    Toggle Sidebar
                  </span>
                </button>
              </div>
            </div>
            <div
              class="flex min-h-0 flex-1 flex-col gap-2 overflow-auto group-data-[collapsible=icon]:overflow-hidden"
              data-sidebar="content"
              data-slot="sidebar-content"
            >
              <div
                class="relative flex w-full min-w-0 flex-col p-2"
                data-sidebar="group"
                data-slot="sidebar-group"
              >
                <div
                  class="text-sidebar-foreground/70 ring-sidebar-ring flex h-8 shrink-0 items-center rounded-md px-2 text-xs font-medium outline-hidden transition-[margin,opacity] duration-200 ease-linear focus-visible:ring-2 [&>svg]:size-4 [&>svg]:shrink-0 group-data-[collapsible=icon]:-mt-8 group-data-[collapsible=icon]:opacity-0"
                  data-sidebar="group-label"
                  data-slot="sidebar-group-label"
                >
                  Administration
                </div>
                <div
                  class="w-full text-sm"
                  data-sidebar="group-content"
                  data-slot="sidebar-group-content"
                >
                  <ul
                    class="flex w-full min-w-0 flex-col gap-1"
                    data-sidebar="menu"
                    data-slot="sidebar-menu"
                  >
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/admin/dashboard"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-layout-dashboard"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="9"
                            rx="1"
                            width="7"
                            x="3"
                            y="3"
                          />
                          <rect
                            height="5"
                            rx="1"
                            width="7"
                            x="14"
                            y="3"
                          />
                          <rect
                            height="9"
                            rx="1"
                            width="7"
                            x="14"
                            y="12"
                          />
                          <rect
                            height="5"
                            rx="1"
                            width="7"
                            x="3"
                            y="16"
                          />
                        </svg>
                        <span>
                          Dashboard
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/admin/users"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-users"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                          />
                          <path
                            d="M16 3.128a4 4 0 0 1 0 7.744"
                          />
                          <path
                            d="M22 21v-2a4 4 0 0 0-3-3.87"
                          />
                          <circle
                            cx="9"
                            cy="7"
                            r="4"
                          />
                        </svg>
                        <span>
                          Nutzer
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/admin/subscriptions"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-credit-card"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="14"
                            rx="2"
                            width="20"
                            x="2"
                            y="5"
                          />
                          <line
                            x1="2"
                            x2="22"
                            y1="10"
                            y2="10"
                          />
                        </svg>
                        <span>
                          Abonnements
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/admin/subscription-plans"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chart-column"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M3 3v16a2 2 0 0 0 2 2h16"
                          />
                          <path
                            d="M18 17V9"
                          />
                          <path
                            d="M13 17V5"
                          />
                          <path
                            d="M8 17v-3"
                          />
                        </svg>
                        <span>
                          Abo-Pläne
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="relative flex w-full min-w-0 flex-col p-2"
                data-sidebar="group"
                data-slot="sidebar-group"
              >
                <div
                  class="w-full text-sm"
                  data-sidebar="group-content"
                  data-slot="sidebar-group-content"
                >
                  <ul
                    class="flex w-full min-w-0 flex-col gap-1"
                    data-sidebar="menu"
                    data-slot="sidebar-menu"
                  >
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/"
                      >
                        <span>
                          ← Zurück zur App
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main
        class="flex flex-1 flex-col overflow-hidden"
      >
        <header
          class="flex items-center gap-3 border-b bg-white px-4 py-3 sm:hidden"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-7 cursor-pointer"
            data-sidebar="trigger"
            data-slot="sidebar-trigger"
            data-testid="admin-sidebar-mobile-header"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-panel-left"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M9 3v18"
              />
            </svg>
            <span
              class="sr-only"
            >
              Toggle Sidebar
            </span>
          </button>
          <span
            class="text-base font-bold"
          >
            Vision Notes
             Admin
          </span>
        </header>
        <div
          class="min-h-0 flex-1"
        >
          <div
            data-testid="test-1"
          />
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`AuthenticatedAdminLayoutWrapper rendering tests sidebarCookie undefined - test 1`] = `
<div>
  <div
    class="h-full"
    data-testid="authenticated-admin-layout-wrapper"
  >
    <div
      class="group/sidebar-wrapper has-data-[variant=inset]:bg-sidebar flex min-h-svh w-full"
      data-slot="sidebar-wrapper"
      data-testid="sidebar-wrapper"
      style="--sidebar-width: 16rem; --sidebar-width-icon: 3rem;"
    >
      <div
        class="group peer text-sidebar-foreground hidden md:block"
        data-collapsible=""
        data-side="left"
        data-slot="sidebar"
        data-state="expanded"
        data-variant="sidebar"
      >
        <div
          class="relative w-(--sidebar-width) bg-transparent transition-[width] duration-200 ease-linear group-data-[collapsible=offcanvas]:w-0 group-data-[side=right]:rotate-180 group-data-[collapsible=icon]:w-(--sidebar-width-icon)"
          data-slot="sidebar-gap"
        />
        <div
          class="fixed inset-y-0 z-10 hidden h-svh w-(--sidebar-width) transition-[left,right,width] duration-200 ease-linear md:flex left-0 group-data-[collapsible=offcanvas]:left-[calc(var(--sidebar-width)*-1)] group-data-[collapsible=icon]:w-(--sidebar-width-icon) group-data-[side=left]:border-r group-data-[side=right]:border-l"
          data-slot="sidebar-container"
          data-testid="admin-sidebar"
        >
          <div
            class="bg-sidebar group-data-[variant=floating]:border-sidebar-border flex h-full w-full flex-col group-data-[variant=floating]:rounded-lg group-data-[variant=floating]:border group-data-[variant=floating]:shadow-sm"
            data-sidebar="sidebar"
            data-slot="sidebar-inner"
          >
            <div
              class="flex flex-col gap-2 p-2"
              data-sidebar="header"
              data-slot="sidebar-header"
              data-testid="admin-sidebar-header"
            >
              <div
                class="flex items-center justify-between gap-2 px-1 py-1"
              >
                <a
                  class="flex min-w-0 items-center gap-2"
                  data-testid="mock-link"
                  href="/admin"
                >
                  <span
                    class="truncate text-lg font-bold"
                  >
                    Vision Notes
                     Admin
                  </span>
                </a>
                <button
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-7 shrink-0 cursor-pointer"
                  data-sidebar="trigger"
                  data-slot="sidebar-trigger"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-panel-left"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="18"
                      rx="2"
                      width="18"
                      x="3"
                      y="3"
                    />
                    <path
                      d="M9 3v18"
                    />
                  </svg>
                  <span
                    class="sr-only"
                  >
                    Toggle Sidebar
                  </span>
                </button>
              </div>
            </div>
            <div
              class="flex min-h-0 flex-1 flex-col gap-2 overflow-auto group-data-[collapsible=icon]:overflow-hidden"
              data-sidebar="content"
              data-slot="sidebar-content"
            >
              <div
                class="relative flex w-full min-w-0 flex-col p-2"
                data-sidebar="group"
                data-slot="sidebar-group"
              >
                <div
                  class="text-sidebar-foreground/70 ring-sidebar-ring flex h-8 shrink-0 items-center rounded-md px-2 text-xs font-medium outline-hidden transition-[margin,opacity] duration-200 ease-linear focus-visible:ring-2 [&>svg]:size-4 [&>svg]:shrink-0 group-data-[collapsible=icon]:-mt-8 group-data-[collapsible=icon]:opacity-0"
                  data-sidebar="group-label"
                  data-slot="sidebar-group-label"
                >
                  Administration
                </div>
                <div
                  class="w-full text-sm"
                  data-sidebar="group-content"
                  data-slot="sidebar-group-content"
                >
                  <ul
                    class="flex w-full min-w-0 flex-col gap-1"
                    data-sidebar="menu"
                    data-slot="sidebar-menu"
                  >
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/admin/dashboard"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-layout-dashboard"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="9"
                            rx="1"
                            width="7"
                            x="3"
                            y="3"
                          />
                          <rect
                            height="5"
                            rx="1"
                            width="7"
                            x="14"
                            y="3"
                          />
                          <rect
                            height="9"
                            rx="1"
                            width="7"
                            x="14"
                            y="12"
                          />
                          <rect
                            height="5"
                            rx="1"
                            width="7"
                            x="3"
                            y="16"
                          />
                        </svg>
                        <span>
                          Dashboard
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/admin/users"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-users"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                          />
                          <path
                            d="M16 3.128a4 4 0 0 1 0 7.744"
                          />
                          <path
                            d="M22 21v-2a4 4 0 0 0-3-3.87"
                          />
                          <circle
                            cx="9"
                            cy="7"
                            r="4"
                          />
                        </svg>
                        <span>
                          Nutzer
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/admin/subscriptions"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-credit-card"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            height="14"
                            rx="2"
                            width="20"
                            x="2"
                            y="5"
                          />
                          <line
                            x1="2"
                            x2="22"
                            y1="10"
                            y2="10"
                          />
                        </svg>
                        <span>
                          Abonnements
                        </span>
                      </a>
                    </li>
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/admin/subscription-plans"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chart-column"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M3 3v16a2 2 0 0 0 2 2h16"
                          />
                          <path
                            d="M18 17V9"
                          />
                          <path
                            d="M13 17V5"
                          />
                          <path
                            d="M8 17v-3"
                          />
                        </svg>
                        <span>
                          Abo-Pläne
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="relative flex w-full min-w-0 flex-col p-2"
                data-sidebar="group"
                data-slot="sidebar-group"
              >
                <div
                  class="w-full text-sm"
                  data-sidebar="group-content"
                  data-slot="sidebar-group-content"
                >
                  <ul
                    class="flex w-full min-w-0 flex-col gap-1"
                    data-sidebar="menu"
                    data-slot="sidebar-menu"
                  >
                    <li
                      class="group/menu-item relative"
                      data-sidebar="menu-item"
                      data-slot="sidebar-menu-item"
                    >
                      <a
                        class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left outline-hidden ring-sidebar-ring transition-[width,height,padding] focus-visible:ring-2 active:bg-sidebar-accent active:text-sidebar-accent-foreground disabled:pointer-events-none disabled:opacity-50 group-has-data-[sidebar=menu-action]/menu-item:pr-8 aria-disabled:pointer-events-none aria-disabled:opacity-50 data-[active=true]:bg-sidebar-accent data-[active=true]:font-medium data-[active=true]:text-sidebar-accent-foreground data-[state=open]:hover:bg-sidebar-accent data-[state=open]:hover:text-sidebar-accent-foreground group-data-[collapsible=icon]:size-8! group-data-[collapsible=icon]:p-2! [&>span:last-child]:truncate [&>svg]:size-4 [&>svg]:shrink-0 hover:bg-sidebar-accent hover:text-sidebar-accent-foreground h-8 text-sm"
                        data-active="false"
                        data-sidebar="menu-button"
                        data-size="default"
                        data-slot="sidebar-menu-button"
                        data-testid="mock-link"
                        href="/"
                      >
                        <span>
                          ← Zurück zur App
                        </span>
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <main
        class="flex flex-1 flex-col overflow-hidden"
      >
        <header
          class="flex items-center gap-3 border-b bg-white px-4 py-3 sm:hidden"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-7 cursor-pointer"
            data-sidebar="trigger"
            data-slot="sidebar-trigger"
            data-testid="admin-sidebar-mobile-header"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-panel-left"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="3"
              />
              <path
                d="M9 3v18"
              />
            </svg>
            <span
              class="sr-only"
            >
              Toggle Sidebar
            </span>
          </button>
          <span
            class="text-base font-bold"
          >
            Vision Notes
             Admin
          </span>
        </header>
        <div
          class="min-h-0 flex-1"
        >
          <div
            data-testid="test-1"
          />
        </div>
      </main>
    </div>
  </div>
</div>
`;
